Dropdown menus modules and projects

--- a/index.html
+++ b/index.html
@@ -25,20 +25,34 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
+            Modulos
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><a class="dropdown-item" href="#">Modulo 1</a></li>
+            <li><a class="dropdown-item" href="#">Modulo 2</a></li>
+            <li><a class="dropdown-item" href="#">Modulo 3</a></li>
+            <li><a class="dropdown-item" href="#">Modulo 4</a></li>
+            <li><a class="dropdown-item" href="#">Modulo 5</a></li>
+            <li><a class="dropdown-item" href="#">Modulo 6</a></li>
+            <li><a class="dropdown-item" href="#">Modulo 7</a></li>
+            <li><a class="dropdown-item" href="#">Modulo 8</a></li>
+            <li><a class="dropdown-item" href="#">Modulo 9</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
         </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Projects
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="#">PacMen</a></li>
+            <li><a class="dropdown-item" href="#">Eye</a></li>
+            <li><a class="dropdown-item" href="#">Real Time Bus Tracker</a></li>
+          </ul>
+        </li> 
         <li class="nav-item">
           <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
         </li>
