--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" href="https://github.com/Orion-Technologies/PacMen-Exercise">PacMen Repository</a></li>
             <li><a class="dropdown-item" href="https://orion-technologies.github.io/PacMen-Exercise/">PacMen Live View</a></li>
-            <li><a class="dropdown-item" href="#">Eye</a></li>
+            <li><a class="dropdown-item" href="https://github.com/Orion-Technologies/EyeExercise">Eye Repository</a></li>
+            <li><a class="dropdown-item" href="https://orion-technologies.github.io/EyeExercise/">Eye Live Viwe</a></li>
             <li><a class="dropdown-item" href="#">Real Time Bus Tracker</a></li>
           </ul>
         </li> 
