Bus tracker update

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
             <li><a class="dropdown-item" href="https://orion-technologies.github.io/PacMen-Exercise/">PacMen Live View</a></li>
             <li><a class="dropdown-item" href="https://github.com/Orion-Technologies/EyeExercise">Eye Repository</a></li>
             <li><a class="dropdown-item" href="https://orion-technologies.github.io/EyeExercise/">Eye Live Viwe</a></li>
-            <li><a class="dropdown-item" href="#">Real Time Bus Tracker</a></li>
+            <li><a class="dropdown-item" href="https://github.com/Orion-Technologies/Real_Time_Bus_Tracker">Real Time Bus Tracker Repository</a></li>
+            <li><a class="dropdown-item" href="https://orion-technologies.github.io/Real_Time_Bus_Tracker/">Real Time Bus Tracker Live View</a></li>
           </ul>
         </li> 
         <li class="nav-item">
