--- a/index.html
+++ b/index.html
@@ -38,9 +38,8 @@
             <li><a class="dropdown-item" href="#">Modulo 6</a></li>
             <li><a class="dropdown-item" href="#">Modulo 7</a></li>
             <li><a class="dropdown-item" href="#">Modulo 8</a></li>
-            <li><a class="dropdown-item" href="#">Modulo 9</a></li>
+            <li><a class="dropdown-item" href="https://github.com/Orion-Technologies/Week9MIT">Modulo 9</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
         </li>
         <li class="nav-item dropdown">
