--- a/index.html
+++ b/index.html
@@ -79,8 +79,15 @@
       </div>
       <div class="col-md-8">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <h5 class="card-title">BIO</h5>
+          <p class="card-text">Hello, I’m Abel Archila, I am a software developer, around of my career I have learned many programming languages that have formed me as a professional.</p>
+          <p class="card-text">Some programming languages that I know are Java, JavaScript, Scheme and Pascal.
+I know Data Bases too, I have worked with MySQL, SQL, and SQLite.
+</p>
+          <p class="card-text">I have made web sites with HTML5, CSS3, Bootstrap, and WordPress.</p>
+          <p class="card-text">One of my hobbies is to take pictures, this is how I de-stress myself and stimulate my creativity, but I use this activity to work too, I have taken pictures for products and I have used them in web sites.</p>
+          <p class="card-text">I like to drink coffee, to buy caps and tennis shoes.</p>
+          
           <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
         </div>
       </div>
