card center aling

--- a/index.html
+++ b/index.html
@@ -71,8 +71,9 @@
   <img src="..." class="img-fluid" alt="...">
 </div>
 
+<div class="mx-auto" style="width: 700px;">
 <div id="card">
-  <div class="card mb-3" style="max-width: 540px;">
+  <div class="card mb-3" style="max-width: 700px;">
     <div class="row g-0">
       <div class="col-md-4">
         <img src="/images/BioPic.jpg" class="img-fluid rounded-start" alt="...">
@@ -93,6 +94,7 @@ I know Data Bases too, I have worked with MySQL, SQL, and SQLite.
       </div>
     </div>
   </div>
+</div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
