--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
   <img src="..." class="img-fluid" alt="...">
 </div>
 
+<!-- this div aling at center the card -->
 <div class="mx-auto" style="width: 700px;">
 <div id="card">
   <div class="card mb-3" style="max-width: 700px;">
