--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <!-- this div aling at center the card -->
 <div class="mx-auto" style="width: 700px;">
 <div id="card">
-  <div class="card mb-3" style="max-width: 700px;">
+  <div class="card mb-3 card border-dark mb-3" style="max-width: 700px;">
     <div class="row g-0">
       <div class="col-md-4">
         <img src="/images/BioPic.jpg" class="img-fluid rounded-start" alt="...">
