--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <div class="card mb-3 card border-dark mb-3" style="max-width: 700px;">
     <div class="row g-0">
       <div class="col-md-4">
-        <img src="images/BioPic.jpg" class="img-fluid rounded-start" alt="...">
+        <img src="images/BioPic.jpg" class="img-fluid rounded-start" alt="Abel Archila">
       </div>
       <div class="col-md-8">
         <div class="card-body">
