--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 </nav>
 
 <div id="hero">
-  <img src="..." class="img-fluid" alt="...">
+  <img src="images/Bee.jpg" class="img-fluid" alt="Bee one of my pictures">
 </div>
 
 <!-- this div aling at center the card -->
