--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
   <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="images/Bee.jpg" class="d-block w-100" alt="...">
+        <img src="images/Bee.jpg" class="d-block w-100" alt="One of my pictures">
       </div>
       <div class="carousel-item">
-        <img src="images/Gorrion.jpg" class="d-block w-100" alt="...">
+        <img src="images/Gorrion.jpg" class="d-block w-100" alt="One of my pictures">
       </div>
       <div class="carousel-item">
-        <img src="images/Tortolita.jpg" class="d-block w-100" alt="...">
+        <img src="images/Tortolita.jpg" class="d-block w-100" alt="One of my pictures">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
