--- a/index.html
+++ b/index.html
@@ -91,6 +91,12 @@
   </div>
 </div>
 <br />
+<!-- Video Embed -->
+
+<div class="ratio ratio-16x9">
+  <iframe src="https://youtu.be/5TYIBOMbY90" title="YouTube video" allowfullscreen></iframe>
+</div>
+
 <!-- this div aling at center the card -->
 <div class="mx-auto" style="width: 700px;">
 <div id="card">
