--- a/index.html
+++ b/index.html
@@ -68,35 +68,16 @@
 </nav>
 
 <div id="hero">
-  <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="images/Bee.jpg" class="d-block w-100" alt="One of my pictures">
-      </div>
-      <div class="carousel-item">
-        <img src="images/Gorrion.jpg" class="d-block w-100" alt="One of my pictures">
-      </div>
-      <div class="carousel-item">
-        <img src="images/Tortolita.jpg" class="d-block w-100" alt="One of my pictures">
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
+  <img src="images/MERN-logo.png" class="img-fluid" alt="...">
 </div>
 <br />
 <!-- Video Embed -->
 
 <div class="ratio ratio-16x9">
-  <iframe src="https://youtu.be/5TYIBOMbY90" title="YouTube video" allowfullscreen></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/5TYIBOMbY90" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
+<br />
 <!-- this div aling at center the card -->
 <div class="mx-auto" style="width: 700px;">
 <div id="card">
