--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@ I know Data Bases too, I have worked with MySQL, SQL, and SQLite.
 </div>
 </div>
 
+<h1 class="display-1 typing" >Some of my Pictures</h1>
+
 <div class="card-group">
   <div class="card">
     <img src="images/Bee.jpg" class="card-img-top" alt="...">
