--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ I know Data Bases too, I have worked with MySQL, SQL, and SQLite.
 </div>
 </div>
 
-<h1 class="display-1 typing" >Some of my Pictures</h1>
+<h1 class="display-1 typing"><a href="" class="typewrite" data-period="2000" data-type='[ "Some of my Pictures" ]'></a></h1>
 
 <div class="card-group">
   <div class="card">
