I moved the place the text

--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
+      <style type="test/css">
+        h1 {
+          animation: type 8s steps(60, end); 
+        }
+        </style>
+
       <!-- Bootstrap CSS -->
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 
-      <style type="test/css">
-      h1 {
-        animation: type 8s steps(60, end); 
-      }
-      </style>
+      
 
       <title>Portfolio</title>
 
@@ -104,7 +106,7 @@ I know Data Bases too, I have worked with MySQL, SQL, and SQLite.
 </div>
 </div>
 
-<h1 class="display-1 typing">Some of my Pictures</h1>
+<h1 class="display-1">Some of my Pictures</h1>
 
 <div class="card-group">
   <div class="card">
