--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
       <style type="test/css">
-        h1 {
+        .animation {
           animation: type 8s steps(60, end); 
         }
         </style>
@@ -106,7 +106,7 @@ I know Data Bases too, I have worked with MySQL, SQL, and SQLite.
 </div>
 </div>
 
-<h1 class="display-1">Some of my Pictures</h1>
+<h1 class="display-1 animation">Some of my Pictures</h1>
 
 <div class="card-group">
   <div class="card">
