--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ I know Data Bases too, I have worked with MySQL, SQL, and SQLite.
 
 <div class="card-group">
   <div class="card">
-    <img src="..." class="card-img-top" alt="...">
+    <img src="images/GitHub.png" class="card-img-top" alt="Github" title="GitHub">
     <div class="card-body">
       <h5 class="card-title">Card title</h5>
       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
