--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ I know Data Bases too, I have worked with MySQL, SQL, and SQLite.
     </div>
   </div>
   <div class="card">
-    <img src="images/Linkedin.png" class="card-img-top" alt="Linkedin" title="Linkedin">
+    <img src="images/in.png" class="card-img-top" alt="Linkedin" title="Linkedin">
     <div class="card-body">
       <h5 class="card-title">Card title</h5>
       <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
