changes on images

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 <!-- this div aling at center the card -->
 <div class="mx-auto" style="width: 700px;">
 <div id="card">
-  <div class="card mb-3 card border-dark mb-3" style="max-width: 700px;">
+  <div class="card mb-3 card border-dark mb-3" style="max-width: 900px;">
     <div class="row g-0">
       <div class="col-md-4">
         <img src="images/BioPic.jpg" class="img-fluid rounded-start" alt="Abel Archila">
@@ -102,9 +102,9 @@ I know Data Bases too, I have worked with MySQL, SQL, and SQLite.
 
 <!-- Social Media cards -->
 
-<div class="card-group">
+<div class="card-group gap-3">
   <div class="card">
-    <img src="images/GitHub.png" class="card-img-top" alt="Github" title="GitHub">
+    <img src="images/GitHub.png" class="card-img-top img-thumbnail" alt="Github" title="GitHub">
     <div class="card-body">
       <h5 class="card-title">Card title</h5>
       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -114,7 +114,7 @@ I know Data Bases too, I have worked with MySQL, SQL, and SQLite.
     </div>
   </div>
   <div class="card">
-    <img src="images/in.png" class="card-img-top" alt="Linkedin" title="Linkedin">
+    <img src="images/in.png" class="card-img-top img-thumbnail" alt="Linkedin" title="Linkedin">
     <div class="card-body">
       <h5 class="card-title">Card title</h5>
       <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -124,7 +124,7 @@ I know Data Bases too, I have worked with MySQL, SQL, and SQLite.
     </div>
   </div>
   <div class="card">
-    <img src="images/webpage.png" class="card-img-top" alt="...">
+    <img src="images/webpage.png" class="card-img-top img-thumbnail" alt="...">
     <div class="card-body">
       <h5 class="card-title">Card title</h5>
       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
@@ -138,9 +138,9 @@ I know Data Bases too, I have worked with MySQL, SQL, and SQLite.
 
 <h1 class="display-5 text-secondary">Some of my Pictures</h1>
 <!-- Pictures cards -->
-<div class="card-group">
+<div class="card-group gap-3">
   <div class="card">
-    <img src="images/Bee.jpg" class="card-img-top" alt="...">
+    <img src="images/Bee.jpg" class="card-img-top img-thumbnail" alt="...">
     <div class="card-body">
       <h5 class="card-title">Card title</h5>
       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -150,7 +150,7 @@ I know Data Bases too, I have worked with MySQL, SQL, and SQLite.
     </div>
   </div>
   <div class="card">
-    <img src="images/Gorrion.jpg" class="card-img-top" alt="...">
+    <img src="images/Gorrion.jpg" class="card-img-top img-thumbnail" alt="...">
     <div class="card-body">
       <h5 class="card-title">Card title</h5>
       <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -160,7 +160,7 @@ I know Data Bases too, I have worked with MySQL, SQL, and SQLite.
     </div>
   </div>
   <div class="card">
-    <img src="images/Tortolita.jpg" class="card-img-top" alt="...">
+    <img src="images/Tortolita.jpg" class="card-img-top img-thumbnail" alt="...">
     <div class="card-body">
       <h5 class="card-title">Card title</h5>
       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
