--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ I know Data Bases too, I have worked with MySQL, SQL, and SQLite.
 <!-- Social Media cards -->
 <div class="text_container">
   <div class="text_hide"></div>
-    <h1 class="text">Contacts</h1>
+    <div class="text">Contacts</div>
     <div class="text_cursor"></div>
 </div>
 <div class="card-group gap-3">
