--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
       <!-- typewrite animation -->
 
       <link rel="stylesheet" href="typewriter_animation.css">
-      <script src="typewriter_animation.js"></script>
-
+     
       <!-- Bootstrap CSS -->
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
       
@@ -180,6 +179,11 @@ I know Data Bases too, I have worked with MySQL, SQL, and SQLite.
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
+
+<!-- typewriter js -->
+
+<script src="typewriter_animation.js"></script>
+
 
   </body>
 </html>
