--- a/index.html
+++ b/index.html
@@ -75,17 +75,18 @@
 </div>
 
 <br />
-<!-- this div aling at center the card -->
-<div class="mx-auto" style="width: 700px;">
-<div id="card">
-  <div class="card mb-3 card border-dark mb-3" style="max-width: 900px;">
-    <div class="row g-0">
-      <div class="col-md-4">
-        <img src="images/BioPic.jpg" class="img-fluid rounded-start" alt="Abel Archila">
-      </div>
-      <div class="col-md-8">
-        <div class="card-body">
-          <h5 class="card-title">BIO</h5>
+
+<!-- Social Media cards -->
+<div class="text_container">
+  <div class="text_hide"></div>
+    <div class="text">Contacts me!</div>
+    <div class="text_cursor"></div>
+</div>
+<div class="card-group gap-3">
+  <div class="card">
+    <img src="images/BioPic.jpg" class="card-img-top img-thumbnail" alt="Github" title="GitHub">
+    <div class="card-body">
+      <h5 class="card-title">BIO</h5>
           <p class="card-text">Hello, I’m Abel Archila, I am a software developer, around of my career I have learned many programming languages that have formed me as a professional.</p>
           <p class="card-text">Some programming languages that I know are Java, JavaScript, Scheme and Pascal.
 I know Data Bases too, I have worked with MySQL, SQL, and SQLite.
@@ -93,37 +94,25 @@ I know Data Bases too, I have worked with MySQL, SQL, and SQLite.
           <p class="card-text">I have made web sites with HTML5, CSS3, Bootstrap, and WordPress.</p>
           <p class="card-text">One of my hobbies is to take pictures, this is how I de-stress myself and stimulate my creativity, but I use this activity to work too, I have taken pictures for products and I have used them in web sites.</p>
           <p class="card-text">I like to drink coffee, to buy caps and tennis shoes.</p>
-          
-          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-        </div>
-      </div>
+    </div>
+    <div class="card-footer">
     </div>
   </div>
-</div>
-</div>
-
-<!-- Social Media cards -->
-<div class="text_container">
-  <div class="text_hide"></div>
-    <div class="text">Contacts</div>
-    <div class="text_cursor"></div>
-</div>
-<div class="card-group gap-3">
   <div class="card">
-    <img src="images/GitHub.png" class="card-img-top img-thumbnail" alt="Github" title="GitHub">
+    <img src="images/GitHub.png" class="card-img-top img-thumbnail" alt="Linkedin" title="Linkedin">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      <h5 class="card-title">GitHub</h5>
+      <p class="card-text"><a href="https://github.com/Orion-Technologies">Here!</a></p>
     </div>
     <div class="card-footer">
       <small class="text-muted">Last updated 3 mins ago</small>
     </div>
   </div>
   <div class="card">
-    <img src="images/in.png" class="card-img-top img-thumbnail" alt="Linkedin" title="Linkedin">
+    <img src="images/in.png" class="card-img-top img-thumbnail" alt="...">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+      <h5 class="card-title">Linkedin</h5>
+      <p class="card-text"><a href="https://www.linkedin.com/in/abelarchila/">Here!</a></p>
     </div>
     <div class="card-footer">
       <small class="text-muted">Last updated 3 mins ago</small>
@@ -132,49 +121,13 @@ I know Data Bases too, I have worked with MySQL, SQL, and SQLite.
   <div class="card">
     <img src="images/webpage.png" class="card-img-top img-thumbnail" alt="...">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+      <h5 class="card-title">My Web Site!</h5>
+      <p class="card-text"><a href="http://www.oriontechnologiesgt.com">Here!</a></p>
     </div>
     <div class="card-footer">
       <small class="text-muted">Last updated 3 mins ago</small>
     </div>
-  </div>
-</div>
-
-
-<h1 class="display-5 text-secondary">Some of my Pictures</h1>
-<!-- Pictures cards -->
-<div class="card-group gap-3">
-  <div class="card">
-    <img src="images/Bee.jpg" class="card-img-top img-thumbnail" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-    </div>
-    <div class="card-footer">
-      <small class="text-muted">Last updated 3 mins ago</small>
-    </div>
-  </div>
-  <div class="card">
-    <img src="images/Gorrion.jpg" class="card-img-top img-thumbnail" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-    </div>
-    <div class="card-footer">
-      <small class="text-muted">Last updated 3 mins ago</small>
-    </div>
-  </div>
-  <div class="card">
-    <img src="images/Tortolita.jpg" class="card-img-top img-thumbnail" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-    </div>
-    <div class="card-footer">
-      <small class="text-muted">Last updated 3 mins ago</small>
-    </div>
-  </div>
+  </div> 
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
