--- a/index.html
+++ b/index.html
@@ -68,6 +68,34 @@
   </div>
 </nav>
 
+
+<!-- Social Media cards -->
+<div class="text_container">
+  <div class="text_hide"></div>
+    <div class="text">Contacts me!</div>
+    <div class="text_cursor"></div>
+</div>
+
+<div class="card mb-3" >
+  <div class="row g-0">
+    <div class="col-md-4">
+      <img src="images/BioPic.jpg" class="card-img-top" alt="Abel" title="Abel" style="max-width: 540px;">
+    </div>
+  <div class="col-md-8">
+  <div class="card-body">
+    <h5 class="card-title">Bio</h5>
+    <p class="card-text">Hello, I’m Abel Archila, I am a software developer, around of my career I have learned many programming languages that have formed me as a professional.</p>
+    <p class="card-text">Some programming languages that I know are Java, JavaScript, Scheme and Pascal.
+I know Data Bases too, I have worked with MySQL, SQL, and SQLite.
+</p>
+    <p class="card-text">I have made web sites with HTML5, CSS3, Bootstrap, and WordPress.</p>
+    <p class="card-text">One of my hobbies is to take pictures, this is how I de-stress myself and stimulate my creativity, but I use this activity to work too, I have taken pictures for products and I have used them in web sites.</p>
+    <p class="card-text">I like to drink coffee, to buy caps and tennis shoes.</p>
+</div>
+</div>
+</div>
+</div>
+
 <!-- Video Embed -->
 
 <div class="ratio ratio-16x9">
@@ -76,28 +104,8 @@
 
 <br />
 
-<!-- Social Media cards -->
-<div class="text_container">
-  <div class="text_hide"></div>
-    <div class="text">Contacts me!</div>
-    <div class="text_cursor"></div>
-</div>
 <div class="card-group gap-3">
-  <div class="card">
-    <img src="images/BioPic.jpg" class="card-img-top img-thumbnail" alt="Github" title="GitHub">
-    <div class="card-body">
-      <h5 class="card-title">BIO</h5>
-          <p class="card-text">Hello, I’m Abel Archila, I am a software developer, around of my career I have learned many programming languages that have formed me as a professional.</p>
-          <p class="card-text">Some programming languages that I know are Java, JavaScript, Scheme and Pascal.
-I know Data Bases too, I have worked with MySQL, SQL, and SQLite.
-</p>
-          <p class="card-text">I have made web sites with HTML5, CSS3, Bootstrap, and WordPress.</p>
-          <p class="card-text">One of my hobbies is to take pictures, this is how I de-stress myself and stimulate my creativity, but I use this activity to work too, I have taken pictures for products and I have used them in web sites.</p>
-          <p class="card-text">I like to drink coffee, to buy caps and tennis shoes.</p>
-    </div>
-    <div class="card-footer">
-    </div>
-  </div>
+  
   <div class="card">
     <img src="images/GitHub.png" class="card-img-top img-thumbnail" alt="Linkedin" title="Linkedin">
     <div class="card-body">
