--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
             Modulos
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Modulo 1</a></li>
-            <li><a class="dropdown-item" href="#">Modulo 2</a></li>
+            <li><a class="dropdown-item" href="https://github.com/Orion-Technologies/Week2MIT">Modulo 2</a></li>
             <li><a class="dropdown-item" href="#">Modulo 3</a></li>
             <li><a class="dropdown-item" href="#">Modulo 4</a></li>
             <li><a class="dropdown-item" href="#">Modulo 5</a></li>
