--- a/image_galery.html
+++ b/image_galery.html
@@ -42,7 +42,7 @@
         <div class="row justify-content-center">
     <div class="col-md-8">
         <div class="row mb-4">
-            <a href="images/Monster.jpg" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4">
+            <a href="images/Monster.jpg" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4" target="_blank">
                 <img src="images/Monster.jpg" class="img-fluid">
             </a>
             <a href="https://unsplash.it/1200/768.jpg?image=252" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4">
