--- a/index.html
+++ b/index.html
@@ -71,63 +71,13 @@
                 <li><hr class="dropdown-divider" /></li>
               </ul>
             </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                id="navbarDropdown"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Projects
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li>
-                  <a
-                    class="dropdown-item"
-                    href="https://github.com/Orion-Technologies/PacMen-Exercise"
-                    >PacMen Repository</a
-                  >
-                </li>
-                <li>
-                  <a
-                    class="dropdown-item"
-                    href="https://orion-technologies.github.io/PacMen-Exercise/"
-                    >PacMen Live View</a
-                  >
-                </li>
-                <li>
-                  <a
-                    class="dropdown-item"
-                    href="https://github.com/Orion-Technologies/EyeExercise"
-                    >Eye Repository</a
-                  >
-                </li>
-                <li>
-                  <a
-                    class="dropdown-item"
-                    href="https://orion-technologies.github.io/EyeExercise/"
-                    >Eye Live Viwe</a
-                  >
-                </li>
-                <li>
-                  <a
-                    class="dropdown-item"
-                    href="https://github.com/Orion-Technologies/Real_Time_Bus_Tracker"
-                    >Real Time Bus Tracker Repository</a
-                  >
-                </li>
-                <li>
-                  <a
-                    class="dropdown-item"
-                    href="https://orion-technologies.github.io/Real_Time_Bus_Tracker/"
-                    >Real Time Bus Tracker Live View</a
-                  >
-                </li>
-              </ul>
+          
+            
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="projects.html">Projects</a>
+            </li> 
               <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="image_galery.html">Image Galery</a>
+              <a class="nav-link active" aria-current="page" href="image_gallery.html">Image Galery</a>
             </li>
             </li>
           </ul>
