text in gallery

--- a/image_gallery.html
+++ b/image_gallery.html
@@ -70,6 +70,16 @@
     </nav>
 
     <!-- -->
+
+    <figure class="text-center">
+  <blockquote class="blockquote">
+    <p>Some pictures about products that I was took</p>
+  </blockquote>
+  <figcaption class="blockquote-footer">
+    Pictures <cite title="Source Title">by Abel Archila</cite>
+  </figcaption>
+</figure>
+
     <div class="container-fluid">
       <div class="row justify-content-center">
 
