--- a/image_gallery.html
+++ b/image_gallery.html
@@ -73,7 +73,7 @@
 
     <figure class="text-center">
   <blockquote class="blockquote">
-    <p>Some pictures about products that I was took</p>
+    <p>Some pictures about products that I have took</p>
   </blockquote>
   <figcaption class="blockquote-footer">
     Pictures <cite title="Source Title">by Abel Archila</cite>
