--- a/index.html
+++ b/index.html
@@ -49,27 +49,28 @@
                 Modulos
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li>
-                  <a
-                    class="dropdown-item"
-                    href="https://github.com/Orion-Technologies/Week2MIT"
-                    >Modulo 2</a
-                  >
-                </li>
+                <li><a class="dropdown-item"href="https://github.com/Orion-Technologies/Week2MIT">Modulo 2</a></li>
                 <li><a class="dropdown-item" href="https://github.com/Orion-Technologies/Week3MIT">Modulo 3</a></li>
                 <li><a class="dropdown-item" href="https://github.com/Orion-Technologies/WEEK4MIT">Modulo 4</a></li>
                 <li><a class="dropdown-item" href="https://github.com/Orion-Technologies/WEEK5MIT">Modulo 5</a></li>
                 <li><a class="dropdown-item" href="https://github.com/Orion-Technologies/WEEK6MIT">Modulo 6</a></li>
                 <li><a class="dropdown-item" href="https://github.com/Orion-Technologies/WEEK7MIT">Modulo 7</a></li>
                 <li><a class="dropdown-item" href="https://github.com/Orion-Technologies/WEEK8MIT">Modulo 8</a></li>
-                <li>
-                  <a
-                    class="dropdown-item"
-                    href="https://github.com/Orion-Technologies/Week9MIT"
-                    >Modulo 9</a
-                  >
+                <li><a class="dropdown-item" href="https://github.com/Orion-Technologies/Week9MIT">Modulo 9</a>
                 <li><a class="dropdown-item" href="https://github.com/Orion-Technologies/WEEK10MIT">Modulo 10</a></li>
-
+                <li><a class="dropdown-item" href="https://github.com/Orion-Technologies/WEEK11MIT">Modulo 11</a></li>
+                <li><a class="dropdown-item" href="https://github.com/Orion-Technologies/WEEK12MIT">Modulo 12</a></li>
+                <li><a class="dropdown-item" href="https://github.com/Orion-Technologies/WEEK13MIT">Modulo 13</a></li>
+                <li><a class="dropdown-item" href="https://github.com/Orion-Technologies/WEEK14MIT">Modulo 14</a></li>
+                <li><a class="dropdown-item" href="https://github.com/Orion-Technologies/WEEK15MIT">Modulo 15</a></li>
+                <li><a class="dropdown-item" href="https://github.com/Orion-Technologies/WEEK16MIT">Modulo 16</a></li>
+                <li><a class="dropdown-item" href="https://github.com/Orion-Technologies/WEEK17MIT">Modulo 17</a></li>
+                <li><a class="dropdown-item" href="https://github.com/Orion-Technologies/BadBankProject">Bad Bank Project</a></li>
+                <li><a class="dropdown-item" href="https://github.com/Orion-Technologies/WEEK19MIT">Modulo 19</a></li>
+                <li><a class="dropdown-item" href="https://github.com/Orion-Technologies/WEEK20MIT">Modulo 20</a></li>
+                <li><a class="dropdown-item" href="https://github.com/Orion-Technologies/WEEK21MIT">Modulo 21</a></li>
+                <li><a class="dropdown-item" href="https://github.com/Orion-Technologies/WEEK22MIT">Modulo 22</a></li>
+                
                 </li>
                 <li><hr class="dropdown-divider" /></li>
               </ul>
