--- a/projects.html
+++ b/projects.html
@@ -97,6 +97,29 @@
                   </li>
             </ul>
           </div>
+            
+       <div class="card-group">
+        <div class="card">
+          <img src="images/pacmen.png" class="card-img-top" alt="Pacmen" title="Bad Bank">
+          <div class="card-body">
+            <h5 class="card-title">Bad Bank</h5>
+            <ul>
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="https://github.com/Orion-Technologies/PacMen-Exercise"
+                    >PacMen Repository</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="https://orion-technologies.github.io/PacMen-Exercise/"
+                    >PacMen Live View</a
+                  >
+                </li>
+                </ul>
+          </div>
         </div>
       </div>
 
