--- a/projects.html
+++ b/projects.html
@@ -122,9 +122,9 @@
                   </li>
             </ul>
           </div>
-             
+         </div>  
              <div class="card">
-          <img src="images/BadBank.png" class="card-img-top" alt="ToDo" title="To-Do List">
+          <img src="images/TodoList.png" class="card-img-top" alt="ToDo" title="To-Do List">
           <div class="card-body">
             <h5 class="card-title">To-Do List</h5>
             <ul>
