--- a/projects.html
+++ b/projects.html
@@ -297,28 +297,7 @@
           </div>     
         </div>
        
-       <div class="card">
-          <img src="images/ShoppingCartAWS.png" class="card-img-top" alt="Shopping Cart AWS" title="Shopping Cart AWS">
-          <div class="card-body">
-            <h5 class="card-title">Shopping Cart AWS</h5>
-            <ul>
-                <li>
-                    <a
-                      class="dropdown-item"
-                      href="https://github.com/Orion-Technologies/WEEK20MIT"
-                      >Shipping Cart AWS Repository</a
-                    >
-                  </li>
-                  <li>
-                    <a
-                      class="dropdown-item"
-                      href="https://cartreact01a.s3.amazonaws.com/index.html"
-                      >Shopping Cart Live AWS View</a
-                    >
-                  </li>
-            </ul>
-          </div>     
-        </div>
+      <!-- add here the las card -->
        
     </div>
    
