--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <li><a class="dropdown-item" href="https://github.com/Orion-Technologies/WEEK7MIT">Week 7</a></li>
                 <li><a class="dropdown-item" href="https://github.com/Orion-Technologies/WEEK8MIT">Week 8</a></li>
                 <li><a class="dropdown-item" href="https://github.com/Orion-Technologies/Week9MIT">Week 9</a>
-                <li><a class="dropdown-item" href="https://github.com/Orion-Technologies/WEEK10MIT">Weeko 10</a></li>
+                <li><a class="dropdown-item" href="https://github.com/Orion-Technologies/WEEK10MIT">Week 10</a></li>
                 <li><a class="dropdown-item" href="https://github.com/Orion-Technologies/WEEK11MIT">Week 11</a></li>
                 <li><a class="dropdown-item" href="https://github.com/Orion-Technologies/WEEK12MIT">Week 12</a></li>
                 <li><a class="dropdown-item" href="https://github.com/Orion-Technologies/WEEK13MIT">Week 13</a></li>
