--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                 <li><a class="dropdown-item" href="https://github.com/Orion-Technologies/WEEK20MIT">Week 20</a></li>
                 <li><a class="dropdown-item" href="https://github.com/Orion-Technologies/WEEK21MIT">Week 21</a></li>
                 <li><a class="dropdown-item" href="https://github.com/Orion-Technologies/WEEK22MIT">Week 22</a></li>
+                <li><a class="dropdown-item" href="https://github.com/Orion-Technologies/WEEK23MIT">Week 23</a></li>
                 
                 </li>
                 <li><hr class="dropdown-divider" /></li>
